2022-12-25  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* index.html: add link to leah blogs

2021-12-30  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* README.ja.rd: update version.

	* index-j.html: ditto.

	* index.html: ditto.

2020-12-31  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* README.ja.rd: update version.

	* index-j.html: ditto.

	* index.html: ditto.

2020-10-16  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* index-j.html: fix link to README-j.html.

2020-10-15  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* index-j.html: add charset.
	thx > https://mevius.5ch.net/test/read.cgi/unix/1397477663/126

2020-02-21  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* index-j.html: add link to VaNT.

2018-12-31  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* README.ja.rd: update version.

	* index-j.html: ditto.

	* index.html: ditto.

2018-02-25  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* index-j.html: update git URL to https

2018-01-02  HIRAOKA Kazuyuki  <khi@users.osdn.me>

	* index.html: update URL

2016-12-31  HIRAOKA Kazuyuki  <khi@users.sourceforge.jp>

	* README.ja.rd: update version.

	* index-j.html: ditto.

	* index.html: ditto.

2016-12-31  HIRAOKA Kazuyuki  <khi@users.sourceforge.jp>

	* index-j.html: add descriptions of snapshot version (MELPA / GIT)
	thx > Yuki Inoue san (inouetakahiroki at gmail.com)

	* index.html: ditto.

	* README.ja.rd: ditto.

2015-12-31  HIRAOKA Kazuyuki  <khi@users.sourceforge.jp>

	* README.ja.rd: add commit-hash of git-head emacs

2015-12-31  HIRAOKA Kazuyuki  <khi@users.sourceforge.jp>

	* README.ja.rd: update version.

	* index.html: ditto.

	* index-j.html: ditto.

	* TUTORIAL.ja.rd: delete obsolete link.

2012-12-29  HIRAOKA Kazuyuki  <khi@users.sourceforge.jp>

	* index-j.html: add link to howmm. fix link to howm-mode.vim.

2011-01-01  HIRAOKA Kazuyuki  <khi@users.sourceforge.jp>

	* README.ja.rd: support new commands.

	* README.ja.rd: move old changelogs to OLD.rd

2010-12-31  HIRAOKA Kazuyuki  <khi@users.sourceforge.jp>
