@@ -32,7 +32,7 @@ Emacs で断片的なメモをどんどんとるための環境です.
       → いろいろ(<a href="https://howm.osdn.jp/cgi-bin/hiki/hiki.cgi">howm wiki</a>)
       <ul>
        <li> →
-            <a href="http://www.bookshelf.jp/cgi-bin/goto.cgi?file=meadow&node=howm">Meadow memo での紹介</a>
+            <a href="https://web.archive.org/web/20160529014325/http://www.bookshelf.jp/soft/meadow_38.html#SEC563">Meadow memo での紹介</a>
       </ul>
  <li> (
       <a href="README-j.html#label-16">バグの指摘をくださる方へ</a>
@@ -82,16 +82,16 @@ Emacs で断片的なメモをどんどんとるための環境です.
             href="http://web.archive.org/web/20100826042656/http://sworddancer.funkyboy.jp/howm_vim/">howm-mode.vim</a>
             (七島さん)
        <li> xyzzy:
-            <a href="http://homepage3.nifty.com/~ko-ji/">→ howm-wrap</a>
+            <a href="https://web.archive.org/web/20160927201253/http://homepage3.nifty.com/~ko-ji/">→ howm-wrap</a>
             (kimura さん)
             ／
-            <a href="http://www.geocities.co.jp/Milano-Cat/2067/howm-init.html">howm-helper</a>
+            <a href="https://web.archive.org/web/20150417193647/http://www.geocities.co.jp/Milano-Cat/2067/howm-init.html">howm-helper</a>
             (deecay さん)
        <li> 秀丸:
-            <a href="http://mrm.seesaa.net/category/789739.html">→ howm.mac</a>
+            <a href="https://web.archive.org/web/20201020142651/http://mrm.seesaa.net/category/789739.html">→ howm.mac</a>
             (Mr.M さん)
        <li> Android:
-            <a href="http://homepage1.nifty.com/ray-mizuki/software/howmm_jp.html">→ howmm</a>
+            <a href="http://ray-mizuki.la.coocan.jp/software/howmm_jp.html">→ howmm</a>
        <li> (移植じゃないけど) Windows:
             <a href="https://github.com/forestail/VaNT-Release">→ VaNT</a>
             (forestail さん)
