@@ -1,3 +1,7 @@
+2022-12-27  HIRAOKA Kazuyuki  <khi@users.osdn.me>
+
+	* index-j.html: update links
+
 2022-12-25  HIRAOKA Kazuyuki  <khi@users.osdn.me>
 
 	* index.html: add link to leah blogs
